--- a/settings.gradle
+++ b/settings.gradle
@@ -1,2 +1,4 @@
 rootProject.name = 'design-patterns-java'
+include 'patterns:abstract-factory'
+findProject(':patterns:abstract-factory')?.name = 'abstract-factory'
 
